--- a/xpi/locale/da/options.dtd
+++ b/xpi/locale/da/options.dtd
@@ -184,6 +184,7 @@
 <!ENTITY Ctr_starinurl		"Stjerne knap">
 <!ENTITY Ctr_feedinurl		"RSS feed knap">
 <!ENTITY Ctr_hideurelstop	"Skjul knapperne 'Stop &amp; Genindlæs'">
+<!ENTITY Ctr_hideurlgo		"Hide 'go' button">
 <!ENTITY Ctr_urlbardropm	"Flyt rullemenu-pilen til slutningen af adresselinjen">
 <!ENTITY Ctr_hideprbutton	"Skjul notifikationsikonet når en popup blokeres">
 <!ENTITY Ctr_urlbar_ib		"Knappen Identitet for websted (Identitet boks)">
@@ -299,6 +300,7 @@
 <!ENTITY Ctr_openInPrivateWindow	"Åbn link i nyt privat vindue">
 <!ENTITY Ctr_openInPrivateWindow.accesskey	"P">
 <!ENTITY appMenuGettingStarted.label	"Kom i gang">
+<!ENTITY goCmd.label		"Go">
 
 <!-- For page context entries. Have to be adjusted for every locale! -->
 <!ENTITY backCmd.accesskey            "T">
