--- a/xpi/locale/el/options.dtd
+++ b/xpi/locale/el/options.dtd
@@ -184,6 +184,7 @@
 <!ENTITY Ctr_starinurl		"Κουμπί-αστέρι">
 <!ENTITY Ctr_feedinurl		"Κουμπί «Συνδρομή» (RSS)">
 <!ENTITY Ctr_hideurelstop	"Απόκρυψη κουμπιών «Διακοπή» &amp; «Ανανέωση»">
+<!ENTITY Ctr_hideurlgo		"Hide 'go' button">
 <!ENTITY Ctr_urlbardropm	"Μετακίνηση του δείκτη ανάπτυξης στο τέλος της γραμμής τοποθεσιών">
 <!ENTITY Ctr_hideprbutton	"Απόκρυψη εικονιδίου ειδοποίησης φραγής αναδυόμενου παραθύρου">
 <!ENTITY Ctr_urlbar_ib		"Κουμπί ταυτοποίησης τοποθεσιών (πλαίσιο ταυτοποίησης)">
@@ -299,6 +300,7 @@
 <!ENTITY Ctr_openInPrivateWindow	"Άνοιγμα σε νέο παράθυρο ιδιωτικής περιήγησης">
 <!ENTITY Ctr_openInPrivateWindow.accesskey	"θ">
 <!ENTITY appMenuGettingStarted.label	"Ξεκινώντας">
+<!ENTITY goCmd.label		"Go">
 
 <!-- For page context entries. Have to be adjusted for every locale! -->
 <!ENTITY backCmd.accesskey            "Π">
