--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -184,6 +184,7 @@
 <!ENTITY Ctr_starinurl		"Botón estrella de marcador">
 <!ENTITY Ctr_feedinurl		"Botón de suscripción (RSS feed)">
 <!ENTITY Ctr_hideurelstop	"Ocultar botones 'parar y recargar'">
+<!ENTITY Ctr_hideurlgo		"Hide 'go' button">
 <!ENTITY Ctr_urlbardropm	"Mover flecha de despliegue al final de la barra de URL">
 <!ENTITY Ctr_hideprbutton	"Ocultar icono de notificación cuando una ventana emergente sea bloqueada">
 <!ENTITY Ctr_urlbar_ib		"Botón de identidad del sitio (cuadro de identidad)">
@@ -238,7 +239,7 @@
 <!ENTITY Ctr_nonavtbborder	"Barras de herramientas en la parte superior: Eliminar bordes de barra de herramientas">
 <!ENTITY Ctr_hidesbclose	"Barras laterales: Ocultar botón cerrar de la barra lateral">
 <!ENTITY Ctr_notextshadow	"Barras de herramientas: Ocultar sombra para texto de barra de herramientas y texto de pestaña">
-<!ENTITY Ctr_chevronfix		"Barra de herramientas de navegación: Ocultar doble flecha (chevron) al final de las barras de herramientas">
+<!ENTITY Ctr_chevronfix		"Barra de herramientas de navegación: Ocultar doble flecha ('More Tools') al final de las barras de herramientas">
 <!ENTITY Ctr_tbsep_winc		"Barras de herramientas en la parte superior: Separadores adcionales de barra de herramientas">
 
 <!ENTITY Ctr_closeabarbut	"Ocultar botón cerrar de barras de complementos">
@@ -299,6 +300,7 @@
 <!ENTITY Ctr_openInPrivateWindow	"Abrir en una nueva ventana privada">
 <!ENTITY Ctr_openInPrivateWindow.accesskey	"P">
 <!ENTITY appMenuGettingStarted.label	"Comenzar">
+<!ENTITY goCmd.label		"Go">
 
 <!-- For page context entries. Have to be adjusted for every locale! a-s-r-p-m -->
 <!ENTITY backCmd.accesskey            "n">
