--- a/xpi/locale/fr/options.dtd
+++ b/xpi/locale/fr/options.dtd
@@ -184,6 +184,7 @@
 <!ENTITY Ctr_starinurl		"Bouton des marque-pages">
 <!ENTITY Ctr_feedinurl		"Bouton d'abonnement">
 <!ENTITY Ctr_hideurelstop	"Masquer 'stop-actualiser'">
+<!ENTITY Ctr_hideurlgo		"Hide 'go' button">
 <!ENTITY Ctr_urlbardropm	"Placer le dropmarker à la fin de la barre d'adresse">
 <!ENTITY Ctr_hideprbutton	"Masquer l'icône de notification quand un pop-up est bloqué">
 <!ENTITY Ctr_urlbar_ib		"Bouton d'identité">
@@ -299,6 +300,7 @@
 <!ENTITY Ctr_openInPrivateWindow	"Ouvrir dans une nouvelle fenêtre de navigation privée">
 <!ENTITY Ctr_openInPrivateWindow.accesskey	"P">
 <!ENTITY appMenuGettingStarted.label	"Pour commencer">
+<!ENTITY goCmd.label		"Go">
 
 <!-- For page context entries. Have to be adjusted for every locale! -->
 <!ENTITY backCmd.accesskey            "d">
