--- a/xpi/locale/it/options.dtd
+++ b/xpi/locale/it/options.dtd
@@ -184,6 +184,7 @@
 <!ENTITY Ctr_starinurl		"Stella nella barra degli indirizzi">
 <!ENTITY Ctr_feedinurl		"Pulsante dei feed nella barra degli indirizzi">
 <!ENTITY Ctr_hideurelstop	"Nascondi pulsanti Stop e Ricarica nella barra degli indirizzi">
+<!ENTITY Ctr_hideurlgo		"Hide 'go' button">
 <!ENTITY Ctr_urlbardropm	"Sposta il pulsante Avanti/Indietro all'estremità della barra degli indirizzi">
 <!ENTITY Ctr_hideprbutton	"Nascondi l'icona di notifica quando un popup viene bloccato">
 <!ENTITY Ctr_urlbar_ib		"Site Identity Button (identity box)">
@@ -238,7 +239,7 @@
 <!ENTITY Ctr_nonavtbborder	"Rimuovi i bordi alle barre degli strumenti posizionate in alto">
 <!ENTITY Ctr_hidesbclose	"Barre laterali: nascondi il pulsante di chiusura della barra laterale">
 <!ENTITY Ctr_notextshadow	"Toolbars: hide shadow for toolbar text and tab text">
-<!ENTITY Ctr_chevronfix		"Barra di navigazione: nascondi la doppia freccia ('chevron') all'estremità delle barre">
+<!ENTITY Ctr_chevronfix		"Barra di navigazione: nascondi la doppia freccia ('More Tools') all'estremità delle barre">
 <!ENTITY Ctr_tbsep_winc		"Top toolbars: additional toolbar separators">
 
 <!ENTITY Ctr_closeabarbut	"Nascondi il pulsante di chiusura">
@@ -299,6 +300,7 @@
 <!ENTITY Ctr_openInPrivateWindow	"Apri in una nuova finestra anonima">
 <!ENTITY Ctr_openInPrivateWindow.accesskey	"P">
 <!ENTITY appMenuGettingStarted.label	"Inizio">
+<!ENTITY goCmd.label		"Go">
 
 <!-- For page context entries. Have to be adjusted for every locale! -->
 <!ENTITY backCmd.accesskey            "I">
