--- a/xpi/locale/pt-BR/options.dtd
+++ b/xpi/locale/pt-BR/options.dtd
@@ -184,6 +184,7 @@
 <!ENTITY Ctr_starinurl		"Botão de Favoritos">
 <!ENTITY Ctr_feedinurl		"Botão Feed">
 <!ENTITY Ctr_hideurelstop	"Ocultar os Botões Parar e Recarregar">
+<!ENTITY Ctr_hideurlgo		"Hide 'go' button">
 <!ENTITY Ctr_urlbardropm	"Mover o dropmarker para o Final das Barras de URL">
 <!ENTITY Ctr_hideprbutton	"Ocultar o Ícone de Notificação Quando um Pop-up Ficar Bloqueado">
 <!ENTITY Ctr_urlbar_ib		"Botão de Identidade do Site (Caixa de Identidade)">
@@ -238,7 +239,7 @@
 <!ENTITY Ctr_nonavtbborder	"Barras superiores: Remover Bordas da Barra">
 <!ENTITY Ctr_hidesbclose	"Barras laterais: Ocultar o Botão Fechar da Barra Lateral">
 <!ENTITY Ctr_notextshadow	"Toolbars: hide shadow for toolbar text and tab text">
-<!ENTITY Ctr_chevronfix		"Barra de Ferramentas Navegação: Ocultar a Seta Dupla ('chevron') no Final das Barras de Ferramentas">
+<!ENTITY Ctr_chevronfix		"Barra de Ferramentas Navegação: Ocultar a Seta Dupla ('More Tools') no Final das Barras de Ferramentas">
 <!ENTITY Ctr_tbsep_winc		"Top toolbars: additional toolbar separators">
 
 <!ENTITY Ctr_closeabarbut	"Ocultar o Botão Fechar">
@@ -299,6 +300,7 @@
 <!ENTITY Ctr_openInPrivateWindow	"Abrir em uma Nova Janela Particular">
 <!ENTITY Ctr_openInPrivateWindow.accesskey	"P">
 <!ENTITY appMenuGettingStarted.label	"Guia Rápido">
+<!ENTITY goCmd.label		"Go">
 
 <!-- For page context entries. Have to be adjusted for every locale! -->
 <!ENTITY backCmd.accesskey            "V">
