--- a/xpi/locale/tr/options.dtd
+++ b/xpi/locale/tr/options.dtd
@@ -184,6 +184,7 @@
 <!ENTITY Ctr_starinurl		"Yıldız-butonu">
 <!ENTITY Ctr_feedinurl		"RSS feed-butonu">
 <!ENTITY Ctr_hideurelstop	"'Dur &amp; YEnile' butonlarını gizle">
+<!ENTITY Ctr_hideurlgo		"Hide 'go' button">
 <!ENTITY Ctr_urlbardropm	"Move dropmarker to location bars end">
 <!ENTITY Ctr_hideprbutton	"Popup engellendiğinde beliren uyarıyı gizle">
 <!ENTITY Ctr_urlbar_ib		"Site Kimlik Düğmesi (identity box)">
@@ -238,7 +239,7 @@
 <!ENTITY Ctr_nonavtbborder	"Tepedeki sekmeler: Araç çubuğu sınırları kaldır">
 <!ENTITY Ctr_hidesbclose	"Sidebars: Kenar çubuğu kapatma düğmesini gizle">
 <!ENTITY Ctr_notextshadow	"Toolbars: hide shadow for toolbar text and tab text">
-<!ENTITY Ctr_chevronfix		"Gezinti araç çubuğu: Araç çubuğu sonunda ki Çift oku gizle ('chevron')">
+<!ENTITY Ctr_chevronfix		"Gezinti araç çubuğu: Araç çubuğu sonunda ki Çift oku gizle ('More Tools')">
 <!ENTITY Ctr_tbsep_winc		"Top toolbars: additional toolbar separators">
 
 <!ENTITY Ctr_closeabarbut	"Eklenti çubuğu kapatma düğmesini sakla">
@@ -299,6 +300,7 @@
 <!ENTITY Ctr_openInPrivateWindow	"Yeni Gizli Pencerede Aç">
 <!ENTITY Ctr_openInPrivateWindow.accesskey	"P">
 <!ENTITY appMenuGettingStarted.label	"Başlarken">
+<!ENTITY goCmd.label		"Go">
 
 <!-- For page context entries. Have to be adjusted for every locale! -->
 <!ENTITY backCmd.accesskey            "i">
