--- a/xpi/locale/dsb/options.dtd
+++ b/xpi/locale/dsb/options.dtd
@@ -184,6 +184,7 @@
 <!ENTITY Ctr_starinurl		"Gwězdowy tłocašk">
 <!ENTITY Ctr_feedinurl		"Kanalowy tłocašk">
 <!ENTITY Ctr_hideurelstop	"Tłocaška Stoj a Znowego adresowych rědkow schowaś">
+<!ENTITY Ctr_hideurlgo		"Hide 'go' button">
 <!ENTITY Ctr_urlbardropm	"Tłocašk na kóńc adresowego póla pśesunuś">
 <!ENTITY Ctr_hideprbutton	"Zdźěleński symbol schowaś, gaž wuskokujuce wokno se blokěrujo">
 <!ENTITY Ctr_urlbar_ib		"Tłocašk sedłoweje identity">
@@ -238,7 +239,7 @@
 <!ENTITY Ctr_nonavtbborder	"Górne symbolowe rědki: ramiki symboloweje rědki wótpóraś">
 <!ENTITY Ctr_hidesbclose	"Bócnice: Tłocašk 'Zacyniś' bócnice schowaś">
 <!ENTITY Ctr_notextshadow	"Symbolowe rědki: seń za tekst symboloweje rědki a rejtarki schowaś">
-<!ENTITY Ctr_chevronfix		"Nawigaciska rědka: dwójnu šypku ('chevron') na kóńcu rědki schowaś">
+<!ENTITY Ctr_chevronfix		"Nawigaciska rědka: dwójnu šypku ('More Tools') na kóńcu rědki schowaś">
 <!ENTITY Ctr_tbsep_winc		"Górjejcne symbolowe rědki: pśidatne źěleńske linije">
 
 <!ENTITY Ctr_closeabarbut	"Tłocašk 'Zacyniś' na rědce dodankow schowaś">
@@ -299,6 +300,7 @@
 <!ENTITY Ctr_openInPrivateWindow	"W nowem priwatnem woknje wócyniś">
 <!ENTITY Ctr_openInPrivateWindow.accesskey	"P">
 <!ENTITY appMenuGettingStarted.label	"Prědne kšace">
+<!ENTITY goCmd.label		"Go">
 
 <!-- For page context entries. Have to be adjusted for every locale! -->
 <!ENTITY backCmd.accesskey            "S">
