--- a/xpi/locale/ru/options.dtd
+++ b/xpi/locale/ru/options.dtd
@@ -51,9 +51,9 @@
 <!ENTITY Ctr_tabmaxwidth	"Макс. ширина:">
 <!ENTITY Ctr_tabminwidth	"Мин. ширина:">
 <!ENTITY Ctr_tabclipwidth	"Ширина обрезки:">
-<!ENTITY Ctr_tabclipwidthI	"Установите вручную «Ширина обрезки» на «1»!">
-<!ENTITY Ctr_tabwidthinfo	"Минимальная и максимальная ширина вкладок изменяется расширением TabMixPlus">
-<!ENTITY Ctr_tabwidthinfo2	"Минимальная и максимальная ширина вкладок изменяется расширением TabUtilities">
+<!ENTITY Ctr_tabclipwidthI	"Вручную установите «Ширина обрезки» на «1»!">
+<!ENTITY Ctr_tabwidthinfo	"Минимальная и максимальная ширина вкладок изменяется расширением 'TabMixPlus'">
+<!ENTITY Ctr_tabwidthinfo2	"Минимальная и максимальная ширина вкладок изменяется расширением 'TabUtilities'">
 <!ENTITY Ctr_tabwidthinfo3	"Значение ниже 48px вызовет сбои в большинстве случаев!">
 <!ENTITY Ctr_tabinsertion	"Открывать связанную вкладку после текущей вкладки (about:config)">
 <!ENTITY Ctr_emptyfavicon	"Восстановить пустой значок на вкладках">
@@ -70,8 +70,8 @@
 <!ENTITY Ctr_closeonleft	"Альтернативная позиция на вкладке">
 <!ENTITY Ctr_close_wwltab	"Закрыть окно при закрытии последней вкладки (about:config)">
 
-<!ENTITY Ctr_hctpinfotab	"Некоторые разновидности вкладок не совместимы с расширением 'Hide Caption Titlebar Plus'.">
-<!ENTITY Ctr_hctpinfoab		"Кнопка в заголовке не совместима с расширением 'Hide Caption Titlebar Plus'.">
+<!ENTITY Ctr_hctpinfotab	"Некоторые разновидности вкладок несовместимы с расширением 'Hide Caption Titlebar Plus'.">
+<!ENTITY Ctr_hctpinfoab		"Кнопка в заголовке несовместима с расширением 'Hide Caption Titlebar Plus'.">
 
 <!ENTITY Ctr_appbutton		"Кнопка приложения">
 <!ENTITY Ctr_appbutton0		"отключена">
@@ -94,13 +94,13 @@
 <!ENTITY Ctr_appbuttonc_cu	"Пользовательский цвет кнопки">
 <!ENTITY Ctr_appbuttonI1	"рекомендуется перезапуск">
 <!ENTITY Ctr_appbuttonI1e	"не видно в строке заголовка операционной системы">
-<!ENTITY Ctr_appbuttonI2	"Цвета кнопок видимые только на панели заголовка и вкладок!">
+<!ENTITY Ctr_appbuttonI2	"Цвета кнопок, видимые только на панели заголовка и вкладок!">
 <!ENTITY Ctr_appbutmhi		"Высокое положение (если на панели вкладок)">
 <!ENTITY Ctr_appbutbdl		"Скрыть рамки и цвет фона">
 <!ENTITY Ctr_dblclclosefx	"Двойной клик закрывает активное окно">
-<!ENTITY Ctr_appbclmmenus	"Активное меню внутри меню кнопки (Новая вкладка, Печать ...)">
+<!ENTITY Ctr_appbclmmenus	"Активное меню внутри меню кнопки (Новая вкладка, Печать…)">
 <!ENTITY Ctr_appbutonclab	"Заголовок">
-<!ENTITY Ctr_appbutonclab2	"Добавить заголовок или оставить пустым">
+<!ENTITY Ctr_appbutonclab2	"Добавьте заголовок или оставьте пустым">
 
 <!ENTITY Ctr_ui				"Основной интерфейс">
 <!ENTITY Ctr_nbiconsize0	"Размер значков панели навигации: small - малый, large - большой">
@@ -110,7 +110,7 @@
 <!ENTITY Ctr_nbcompact		"Уменьшить высоту панели навигации">
 <!ENTITY Ctr_hide_bf_popup	"Не показывать меню истории при нажатии мыши">
 <!ENTITY Ctr_bf_space		"Уменьшить расстояние между кнопками (если это возможно)">
-<!ENTITY Ctr_noconicons		"Контекстное меню страницы: заменить значки надписями (Назад, Вперёд, Обновить...)">
+<!ENTITY Ctr_noconicons		"Контекстное меню страницы: заменить значки надписями (Назад, Вперёд, Обновить…)">
 <!ENTITY Ctr_svgfilters		"SVG цвета для стандартных значков панели инструментов">
 <!ENTITY Ctr_wincontrols	"Подвижное управление полноэкранным режимом">
 <!ENTITY Ctr_emptyfavicon2	"Установить общий значок (пустой и пунктирный)">
@@ -127,8 +127,8 @@
 <!ENTITY Ctr_findbar		"Панель поиска">
 <!ENTITY Ctr_findbar_def	"Положение по умолчанию">
 <!ENTITY Ctr_findbar_top	"вверху">
-<!ENTITY Ctr_findbar_topa	"вверху (по другому)">
-<!ENTITY Ctr_findbar_bota	"внизу (по другому)">
+<!ENTITY Ctr_findbar_topa	"вверху (по-другому)">
+<!ENTITY Ctr_findbar_bota	"внизу (по-другому)">
 <!ENTITY Ctr_nav_txt_ico0	"Показывать только значки (по умолчанию)">
 <!ENTITY Ctr_nav_txt_ico1	"Показывать большие значки">
 <!ENTITY Ctr_nav_txt_ico2	"Показывать значки и текст">
@@ -139,9 +139,10 @@
 <!ENTITY Ctr_hidezoomres	"Кнопки масштаба: скрыть сброс масштабирования">
 <!ENTITY Ctr_alt_newtabp	"Страница новой вкладки: альтернативный вид">
 <!ENTITY Ctr_alt_addonsp	"Страница дополнений «Подробнее»: альтернативный вид">
-<!ENTITY Ctr_bmbutpanelm	"Кнопка меню Закладки: вид панели меню">
-<!ENTITY Ctr_bmbutnotext	"Кнопка меню Закладки: скрыть текст на панели закладок">
-<!ENTITY Ctr_skipprintpr	"Кнопка печати: пропустить предварительный просмотр">
+<!ENTITY Ctr_addonversion	"Add-ons page: display add-on version">
+<!ENTITY Ctr_bmbutpanelm	"Кнопка меню закладок: вид панели меню">
+<!ENTITY Ctr_bmbutnotext	"Кнопка меню закладок: скрыть текст на панели закладок">
+<!ENTITY Ctr_skipprintpr	"Кнопка печати: пропускать предварительный просмотр">
 <!ENTITY Ctr_tbconmenu		"Контекстное меню панели инструментов: скрыть «Переместить в меню», «Удалить с панели инструментов», «Обновить/В закладки все вкладки», «Восстановить закрытую вкладку»">
 <!ENTITY Ctr_noresizerxp	"Скрыть «Индикатор изменения размера» (Windows XP/2000)">
 <!ENTITY Ctr_extraurlkeycb	"Открыть дополнительную панель адреса (Cmd/Ctrl+">
@@ -155,7 +156,7 @@
 <!ENTITY Ctr_tabmokcolor4	"Белый цвет для пустой пунктирной иконки сайта на вкладке">
 
 <!ENTITY Ctr_navthrobber1	"Нажав на индикатор активности открывается указанный адрес:">
-<!ENTITY Ctr_navthrobber2	"Добавить адрес или оставить пустым">
+<!ENTITY Ctr_navthrobber2	"Добавьте адрес или оставьте пустым">
 
 <!ENTITY Ctr_tab_tf_info1	"Текстовые поля поддерживают названия цветов на английском, hex коды, rgb(a) и hsl(a) значения.">
 <!ENTITY Ctr_tab_tf_info2	"Введённое не будет проверяться!">
@@ -177,14 +178,14 @@
 <!ENTITY Ctr_ntabhov		"Ожидающая новая вкладка">
 <!ENTITY Ctr_bold			"Полужирный">
 <!ENTITY Ctr_italic			"Курсив">
-<!ENTITY Ctr_notabhov		"Включение настройки не учитывает параметр «в ожидании»">
+<!ENTITY Ctr_notabhov		"Включение настройки не учитывает параметры «в ожидании»">
 <!ENTITY Ctr_tabc_act_tb	"Цвет фона панели инструментов">
 
 <!ENTITY Ctr_urlbar			"Адресная строка">
 <!ENTITY Ctr_starinurl		"Звёздочка в адресной строке">
 <!ENTITY Ctr_feedinurl		"Кнопка RSS в адресной строке">
 <!ENTITY Ctr_hideurelstop	"Скрыть кнопку «Остановить и перезагрузить»">
-<!ENTITY Ctr_hideurlgo		"Hide 'go' button">
+<!ENTITY Ctr_hideurlgo		"Скрыть кнопку «Перейти»">
 <!ENTITY Ctr_urlbardropm	"Переместить дропмаркер в конец адресной строки">
 <!ENTITY Ctr_hideprbutton	"Скрыть значок уведомления, когда блокируется всплывающее окно">
 <!ENTITY Ctr_urlbar_ib		"Кнопка подлинности сайта">
@@ -201,7 +202,7 @@
 <!ENTITY Ctr_extrabar		"Дополнительные панели инструментов">
 <!ENTITY Ctr_extrabar0		"Дополнительная панель(и)">
 <!ENTITY Ctr_extrabar1		"Дополнительная панель">
-<!ENTITY Ctr_extrabarinfo	"Переключение между режимами «Вкладки вверху» и «Вкладки не вверху» меняет расположение дополнительных панелей. Чтобы решить эту проблему, &brandShortName; должен быть перезапущен.">
+<!ENTITY Ctr_extrabarinfo	"Переключение между режимами «Вкладки вверху» и «Вкладки не вверху» меняет расположение дополнительных панелей. Для решения проблемы требуется перезапуск &brandShortName;.">
 
 <!ENTITY Ctr_invicons		"Перекрашенные наоборот значки">
 <!ENTITY Ctr_menubar		"Панель меню">
@@ -216,7 +217,7 @@
 <!ENTITY Ctr_toolbars		"Панели">
 <!ENTITY Ctr_dblclnewtab	"Двойной клик открывает новую вкладку">
 <!ENTITY Ctr_hidetbwot		"Скрывать панель вкладок при одной вкладке">
-<!ENTITY Ctr_hidetbwote		"Уменьшить задержки сокрытия при запуске">
+<!ENTITY Ctr_hidetbwote		"Уменьшить задержку скрытия при запуске">
 <!ENTITY Ctr_hidetbwote_i	"Может привести к неисправностям на панели вкладок">
 <!ENTITY Ctr_hidetbwote2	"Удерживать панель заголовка (вкладки вверху)">
 <!ENTITY Ctr_notabfog		"Отключить затуманивание фона панели вкладок (Windows AeroGlass/8)">
@@ -239,7 +240,7 @@
 <!ENTITY Ctr_nonavtbborder	"Верхние панели: убрать границы панелей">
 <!ENTITY Ctr_hidesbclose	"Боковые панели: скрыть кнопку «Закрыть» на боковой панели">
 <!ENTITY Ctr_notextshadow	"Панели: скрыть тень от текста на панели инструментов и на вкладках">
-<!ENTITY Ctr_chevronfix		"Панель навигации: скрыть двойную стрелку («Другие инструменты») в конце панели">
+<!ENTITY Ctr_chevronfix		"Панель навигации: скрыть двойную стрелку («Другие инструменты…») в конце панели">
 <!ENTITY Ctr_tbsep_winc		"Верхние панели: дополнительные разделители панелей">
 
 <!ENTITY Ctr_closeabarbut	"Скрыть кнопку закрытия">
@@ -271,7 +272,7 @@
 <!ENTITY Ctr_fx36prefs		"&brandShortName; 36+ настройки в новой вкладке. Отключение этого параметра восстанавливает старое окно настроек.">
 <!ENTITY Ctr_fx38reader		"&brandShortName; 38+ представила новую функцию «режим чтения». Отключение этого параметра выключает этот режим и удаляет значок из адресной строки.">
 <!ENTITY Ctr_fx38pocket		"&brandShortName; 38.0.5+ представила функцию «Pocket». Отключение параметра удаляет эту функцию и кнопку на панели инструментов.">
-<!ENTITY Ctr_fx38pocket2	"Примечание: перед отключением этой опции переместите кнопку «Pocket» на страницу «Настройка &brandShortName;», т.к. удаляются надписи «Pocket» в закладках и режиме чтения.">
+<!ENTITY Ctr_fx38pocket2	"Примечание: Перемещение кнопки «Pocket» на страницу «Настройка &brandShortName;» перед отключением этой опции также удаляет надписи «Pocket» в закладках и режиме чтения.">
 <!ENTITY Ctr_e_omtc			"OMTC / проблемы зависших вкладок">
 <!ENTITY Ctr_e_searchui		"Вид панели поиска">
 <!ENTITY Ctr_e_loop			"Вызов и разговор">
@@ -300,7 +301,7 @@
 <!ENTITY Ctr_openInPrivateWindow	"Открыть в новом приватном окне">
 <!ENTITY Ctr_openInPrivateWindow.accesskey	"P">
 <!ENTITY appMenuGettingStarted.label	"Начало работы">
-<!ENTITY goCmd.label		"Go">
+<!ENTITY goCmd.label		"Перейти">
 
 <!-- For page context entries. Have to be adjusted for every locale! -->
 <!ENTITY backCmd.accesskey            "Н">
