--- a/xpi/locale/zh-CN/options.dtd
+++ b/xpi/locale/zh-CN/options.dtd
@@ -139,7 +139,7 @@
 <!ENTITY Ctr_hidezoomres	"当缩放控制按钮在工具栏上时: 隐藏重置缩放按钮">
 <!ENTITY Ctr_alt_newtabp	"新标签页页面: 备选的外观">
 <!ENTITY Ctr_alt_addonsp	"附加组件“更多”页面: 备选的外观">
-<!ENTITY Ctr_addonversion	"Add-ons page: display add-on version">
+<!ENTITY Ctr_addonversion	"附加组件页面: 显示附加组件版本">
 <!ENTITY Ctr_bmbutpanelm	"书签菜单按钮: 面板式菜单外观">
 <!ENTITY Ctr_bmbutnotext	"书签菜单按钮: 隐藏书签工具栏上的文本标签">
 <!ENTITY Ctr_skipprintpr	"打印按钮: 跳过打印预览">
@@ -185,7 +185,7 @@
 <!ENTITY Ctr_starinurl		"五星按钮">
 <!ENTITY Ctr_feedinurl		"RSS源按钮">
 <!ENTITY Ctr_hideurelstop	"隐藏停止和重新载入按钮">
-<!ENTITY Ctr_hideurlgo		"Hide 'go' button">
+<!ENTITY Ctr_hideurlgo		"隐藏 “转到” 按钮">
 <!ENTITY Ctr_urlbardropm	"下拉控件移动到地址栏尾部">
 <!ENTITY Ctr_hideprbutton	"当弹出窗口被阻止时隐藏通知图标">
 <!ENTITY Ctr_urlbar_ib		"网站身份标识按钮 (身份标识框)">
