--- a/xpi/locale/da/options.dtd
+++ b/xpi/locale/da/options.dtd
@@ -157,6 +157,8 @@
 
 <!ENTITY Ctr_navthrobber1	"Klik på aktivitetsindikatoren åbner følgende URL i et nyt faneblad:">
 <!ENTITY Ctr_navthrobber2	"Tilføj URL eller lad den være tom">
+<!ENTITY Ctr_anewtaburl		"New tab page url">
+<!ENTITY Ctr_anewtaburlcb	"Custom new tab page url (default: 'about:newtab')">
 
 <!ENTITY Ctr_tab_tf_info1	"Farvenavne, hex-koder, rgb(a), og hsl(a) værdier er understøttet.">
 <!ENTITY Ctr_tab_tf_info2	"Det indtastede valideres ikke!">
@@ -262,7 +264,7 @@
 <!ENTITY Ctr_otherctroptns	"Andre indstillinger">
 <!ENTITY Ctr_cuibotbuttons	"Ekstra knapper i 'Tilpas' tilstand">
 <!ENTITY Ctr_bookmarkoinpw	"Menupunktet 'Åbn i et nyt privat vindue' i genvejsmenu til bogmærker">
-<!ENTITY Ctr_nodevtheme		"Prevent 'Developer Theme' from being enabled">
+<!ENTITY Ctr_nodevtheme		"Nightly: Prevent 'Developer Theme' from being enabled">
 
 <!ENTITY Ctr_experttweaks	"Avanceret">
 <!ENTITY Ctr_fx33layers		"&brandShortName; 33+ introducerede 'nye renderingsfunktioner' som i øjeblikket er skyld i 'faneblade som hænger' på nogle systemer. Fjern markeringen for at rette problem.">
