--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -157,6 +157,8 @@
 
 <!ENTITY Ctr_navthrobber1	"Ein Klick auf die Aktivitätsanzeige öffnet folgende Adresse:">
 <!ENTITY Ctr_navthrobber2	"Adresse eintragen oder leer lassen">
+<!ENTITY Ctr_anewtaburl		"Seite 'Neuer Tab'">
+<!ENTITY Ctr_anewtaburlcb	"Eigene Seite 'Neuer Tab' (Standard: 'about:newtab')">
 
 <!ENTITY Ctr_tab_tf_info1	"Textfelder erlauben Farbnamen sowie hexadezimale, RGB(A) und HSL(A) Werte.">
 <!ENTITY Ctr_tab_tf_info2	"Eingegebene Werte werden nicht auf Korrektheit überprüft!">
@@ -262,7 +264,7 @@
 <!ENTITY Ctr_otherctroptns	"Andere Einstellungen">
 <!ENTITY Ctr_cuibotbuttons	"Einstellungsschaltflächen im Modus 'Anpassen'">
 <!ENTITY Ctr_bookmarkoinpw	"'In neuem privaten Fenster öffnen'-Eintrag im Kontextmenu eines Lesezeichens">
-<!ENTITY Ctr_nodevtheme		"Aktivierung des 'Entwickler-Themas' unterbinden">
+<!ENTITY Ctr_nodevtheme		"Nightly: Aktivierung des 'Entwickler-Themas' unterbinden">
 
 <!ENTITY Ctr_experttweaks	"Erweitert">
 <!ENTITY Ctr_fx33layers		"Mit &brandShortName; 33+ wurden neue 'Render-Funktionen' eingeführt, die zurzeit für 'nicht reagierende und einfrierende Tabs' auf einigen Systemen sorgen. Das Deaktivieren dieser Option kann das Problem lösen.">
