--- a/xpi/locale/fr/options.dtd
+++ b/xpi/locale/fr/options.dtd
@@ -157,6 +157,8 @@
 
 <!ENTITY Ctr_navthrobber1	"Un clic sur l'indicateur d'activité ouvre une adresse prédéfinie :">
 <!ENTITY Ctr_navthrobber2	"Ajouter une adresse ou laisser vide">
+<!ENTITY Ctr_anewtaburl		"New tab page url">
+<!ENTITY Ctr_anewtaburlcb	"Custom new tab page url (default: 'about:newtab')">
 
 <!ENTITY Ctr_tab_tf_info1	"Les noms de couleurs, les codes hexadécimaux, les valeurs rgb(a) et hsl(a) sont pris en charge.">
 <!ENTITY Ctr_tab_tf_info2	"Toute autre saisie ne fonctionnera pas!">
@@ -262,7 +264,7 @@
 <!ENTITY Ctr_otherctroptns	"Autres options">
 <!ENTITY Ctr_cuibotbuttons	"Boutons d'options en mode personnalisation">
 <!ENTITY Ctr_bookmarkoinpw	"'Ouvrir dans une nouvelle fenêtre de navigation privée' dans le menu contextuel des marque-pages">
-<!ENTITY Ctr_nodevtheme		"Empêcher l'application du thème 'Developer Edition'">
+<!ENTITY Ctr_nodevtheme		"Nightly: Empêcher l'application du thème 'Developer Edition'">
 
 <!ENTITY Ctr_experttweaks	"Expert">
 <!ENTITY Ctr_fx33layers		"&brandShortName; 33+ introduit de nouvelles possibilités de rendu responsables actuellement de bugs avec les onglets sur certains systèmes (pas de réaction, onglets gelés). Ce problème est résolu en décochant cette option.">
