--- a/xpi/locale/it/options.dtd
+++ b/xpi/locale/it/options.dtd
@@ -157,6 +157,8 @@
 
 <!ENTITY Ctr_navthrobber1	"Cliccando l'indicatore di attività si apre l'url specificato:">
 <!ENTITY Ctr_navthrobber2	"Aggiungi url o lascia vuoto">
+<!ENTITY Ctr_anewtaburl		"New tab page url">
+<!ENTITY Ctr_anewtaburlcb	"Custom new tab page url (default: 'about:newtab')">
 
 <!ENTITY Ctr_tab_tf_info1	"È possibile usare nomi di colori (in inglese), valori esadecimali e i formati rgb(a) e hsl(a).">
 <!ENTITY Ctr_tab_tf_info2	"Nessuna validazione dell’input.">
@@ -262,7 +264,7 @@
 <!ENTITY Ctr_otherctroptns	"Altre impostazioni">
 <!ENTITY Ctr_cuibotbuttons	"Aggiungi pulsanti in modalità personalizzazione">
 <!ENTITY Ctr_bookmarkoinpw	"Voce 'Apri in una nuova finestra anonima' nel menu contestuale dei segnlibri">
-<!ENTITY Ctr_nodevtheme		"Impedisci l'attivazione del 'Developer Theme'">
+<!ENTITY Ctr_nodevtheme		"Nightly: Impedisci l'attivazione del 'Developer Theme'">
 
 <!ENTITY Ctr_experttweaks	"Avanzate">
 <!ENTITY Ctr_fx33layers		"&brandShortName; 33+ ha introdotto nuove funzioni di rendering che sono responsabili del blocco delle schede in alcuni sistemi. Deselezionare questa opzione per risolvere il problema.">
