--- a/xpi/locale/pt-BR/options.dtd
+++ b/xpi/locale/pt-BR/options.dtd
@@ -157,6 +157,8 @@
 
 <!ENTITY Ctr_navthrobber1	"Clicar no Indicador de Atividade Abre a URL Especificada:">
 <!ENTITY Ctr_navthrobber2	"Adicione uma URL ou Deixe em Branco">
+<!ENTITY Ctr_anewtaburl		"New tab page url">
+<!ENTITY Ctr_anewtaburlcb	"Custom new tab page url (default: 'about:newtab')">
 
 <!ENTITY Ctr_tab_tf_info1	"Nomes de Cores, Códigos hex., Valores rgb(a) e hsl(a) são Suportados.">
 <!ENTITY Ctr_tab_tf_info2	"As Entradas Não Serão Validadas!">
@@ -262,7 +264,7 @@
 <!ENTITY Ctr_otherctroptns	"Outras Configurações">
 <!ENTITY Ctr_cuibotbuttons	"Botões Extra no Modo 'Personalização'">
 <!ENTITY Ctr_bookmarkoinpw	"Entrada 'Abrir em uma Nova Janela Particular' no Menu de Contexto dos Favoritos">
-<!ENTITY Ctr_nodevtheme		"Evitar Habilitar o 'Tema do Desenvolvedor'">
+<!ENTITY Ctr_nodevtheme		"Nightly: Evitar Habilitar o 'Tema do Desenvolvedor'">
 
 <!ENTITY Ctr_experttweaks	"Avançado">
 <!ENTITY Ctr_fx33layers		"O &brandShortName; 33+ Introduziu 'Novos Recursos de Renderização', Atualmente Responsáveis por 'Suspender Abas' em Alguns Sistemas. Desmarque esta Opção para Resolver este Problema.">
