--- a/xpi/locale/ru/options.dtd
+++ b/xpi/locale/ru/options.dtd
@@ -157,6 +157,8 @@
 
 <!ENTITY Ctr_navthrobber1	"Нажав на индикатор активности открывается указанный адрес:">
 <!ENTITY Ctr_navthrobber2	"Добавьте адрес или оставьте пустым">
+<!ENTITY Ctr_anewtaburl		"New tab page url">
+<!ENTITY Ctr_anewtaburlcb	"Custom new tab page url (default: 'about:newtab')">
 
 <!ENTITY Ctr_tab_tf_info1	"Текстовые поля поддерживают названия цветов на английском, hex коды, rgb(a) и hsl(a) значения.">
 <!ENTITY Ctr_tab_tf_info2	"Введённое не будет проверяться!">
@@ -262,7 +264,7 @@
 <!ENTITY Ctr_otherctroptns	"Другие настройки">
 <!ENTITY Ctr_cuibotbuttons	"Дополнительные кнопки на странице «Настройка &brandShortName;»">
 <!ENTITY Ctr_bookmarkoinpw	"«Открыть в новом приватном окне» в контекстном меню закладок">
-<!ENTITY Ctr_nodevtheme		"Предотвращение активации «Тема разработчика»">
+<!ENTITY Ctr_nodevtheme		"Nightly: Предотвращение активации «Тема разработчика»">
 
 <!ENTITY Ctr_experttweaks	"Продвинутые">
 <!ENTITY Ctr_fx33layers		"&brandShortName; 33+ новые возможности визуализации, на некоторых системах вызывает ошибки с вкладками (нет реакции, вкладки заморожены). Отключение этой опции решает проблему.">
