--- a/xpi/locale/tr/options.dtd
+++ b/xpi/locale/tr/options.dtd
@@ -157,6 +157,8 @@
 
 <!ENTITY Ctr_navthrobber1	"Etkinlik göstergesine tıklamak beliritilen bağlantıyı açar:">
 <!ENTITY Ctr_navthrobber2	"Bağlantı ekle ve ya boş bırakın:">
+<!ENTITY Ctr_anewtaburl		"New tab page url">
+<!ENTITY Ctr_anewtaburlcb	"Custom new tab page url (default: 'about:newtab')">
 
 <!ENTITY Ctr_tab_tf_info1	"Renk isimleri, hexcodes, rgb(a) ve hsl(a) değerleri desteklenir.">
 <!ENTITY Ctr_tab_tf_info2	"Girişler doğrulanamayacak!">
@@ -262,7 +264,7 @@
 <!ENTITY Ctr_otherctroptns	"Diğer ayarlar">
 <!ENTITY Ctr_cuibotbuttons	"'Özelleştirme' modunda ekstra butonlar">
 <!ENTITY Ctr_bookmarkoinpw	"'Yeni gizli pencere aç' yerimleri bağlam menüsünde bir girdi">
-<!ENTITY Ctr_nodevtheme		"Prevent 'Developer Theme' from being enabled">
+<!ENTITY Ctr_nodevtheme		"Nightly: Prevent 'Developer Theme' from being enabled">
 
 <!ENTITY Ctr_experttweaks	"Gelişmiş">
 <!ENTITY Ctr_fx33layers		"&brandShortName; 33+ introduced 'new render features' currently responsible for 'hanging tabs' on some systems. Unchecking this preference resolves this issue.">
