--- a/xpi/locale/zh-CN/options.dtd
+++ b/xpi/locale/zh-CN/options.dtd
@@ -157,6 +157,8 @@
 
 <!ENTITY Ctr_navthrobber1	"点击活动指示器打开指定网址:">
 <!ENTITY Ctr_navthrobber2	"添加网址或放空">
+<!ENTITY Ctr_anewtaburl		"New tab page url">
+<!ENTITY Ctr_anewtaburlcb	"Custom new tab page url (default: 'about:newtab')">
 
 <!ENTITY Ctr_tab_tf_info1	"可支持颜色名称, hex值, rgb(a) 以及 hsl(a) 值。">
 <!ENTITY Ctr_tab_tf_info2	"输入值不会进行校验！">
@@ -262,7 +264,7 @@
 <!ENTITY Ctr_otherctroptns	"其它设置">
 <!ENTITY Ctr_cuibotbuttons	"在“定制”模式中显示额外的按钮">
 <!ENTITY Ctr_bookmarkoinpw	"书签右键菜单中显示“在新建隐私浏览窗口中打开”">
-<!ENTITY Ctr_nodevtheme		"阻止“开发者主题”被启用">
+<!ENTITY Ctr_nodevtheme		"Nightly: 阻止“开发者主题”被启用">
 
 <!ENTITY Ctr_experttweaks	"高级">
 <!ENTITY Ctr_fx33layers		"&brandShortName; 33+ 引入“新渲染器功能”目前可能是某些系统“标签页卡死”的主要原因。不选中此项以解决该问题。">
