--- a/xpi/locale/sl/options.dtd
+++ b/xpi/locale/sl/options.dtd
@@ -157,6 +157,8 @@
 
 <!ENTITY Ctr_navthrobber1	"Klik na kazalnik dejavnosti odpre naslednji url v novem zavihku:">
 <!ENTITY Ctr_navthrobber2	"Dodajte url ali pustite prazno">
+<!ENTITY Ctr_anewtaburl		"New tab page url">
+<!ENTITY Ctr_anewtaburlcb	"Custom new tab page url (default: 'about:newtab')">
 
 <!ENTITY Ctr_tab_tf_info1	"Podprta so imena barv, šestnajstiške kode, rga(a) in hsl(a).">
 <!ENTITY Ctr_tab_tf_info2	"Vnosi ne bodo preverjeni!">
@@ -262,7 +264,7 @@
 <!ENTITY Ctr_otherctroptns	"Druge nastavitve">
 <!ENTITY Ctr_cuibotbuttons	"Dodatni gumbi v načinu 'prilagoditve'">
 <!ENTITY Ctr_bookmarkoinpw	"Vnos 'Odpri v novem zasebnem oknu' v vsebinskem meniju zaznamkov">
-<!ENTITY Ctr_nodevtheme		"Prepreči namestitev teme 'Developer Theme'">
+<!ENTITY Ctr_nodevtheme		"Nightly: Prepreči namestitev teme 'Developer Theme'">
 
 <!ENTITY Ctr_experttweaks	"Napredno">
 <!ENTITY Ctr_fx33layers		"&brandShortName; 33+ je vpeljal 'nove možnosti izrisa', ki na nekaterih sistemih povzročajo 'zamrznitev zavihkov'. Odznačitev te nastavitve bo rešila to težavo.">
