--- a/xpi/locale/pl/options.dtd
+++ b/xpi/locale/pl/options.dtd
@@ -157,8 +157,8 @@
 
 <!ENTITY Ctr_navthrobber1	"Kliknięcie wskaźnika aktywności otwiera określony adres:">
 <!ENTITY Ctr_navthrobber2	"Dodaj adres albo pozostaw puste">
-<!ENTITY Ctr_anewtaburl		"New tab page url">
-<!ENTITY Ctr_anewtaburlcb	"Custom new tab page url (default: 'about:newtab')">
+<!ENTITY Ctr_anewtaburl		"Adres strony nowej karty">
+<!ENTITY Ctr_anewtaburlcb	"Niestandardowy adres strony nowej karty (domyślny: 'about:newtab')">
 
 <!ENTITY Ctr_tab_tf_info1	"Nazwy kolorów, kod szesnastkowy, wartości rgb(a) i hsl(a) są obsługiwane.">
 <!ENTITY Ctr_tab_tf_info2	"Wejścia nie będą zatwierdzane!">
@@ -287,7 +287,7 @@
 
 <!ENTITY Ctr_pw_settings	"Ustawienia">
 <!ENTITY Ctr_pw_set_reset	"Przywróć domyślne">
-<!ENTITY Ctr_pw_set_predef	"Klasyczne ustawienia">
+<!ENTITY Ctr_pw_set_predef	"Ustawienia klasyczne">
 <!ENTITY Ctr_pw_set_preaus	"Ustawienia Firefoksa">
 <!ENTITY Ctr_pw_set_export	"Eksportuj ustawienia">
 <!ENTITY Ctr_pw_set_import	"Importuj ustawienia">
