Update language to 1.3.5Beta3

--- a/xpi/locale/cs/options.dtd
+++ b/xpi/locale/cs/options.dtd
@@ -98,7 +98,7 @@
 <!ENTITY Ctr_appbutmhi		"Vyšší umístění (pokud na liště s panely)">
 <!ENTITY Ctr_appbutbdl		"Skrýt okraje a barvy pozadí">
 <!ENTITY Ctr_dblclclosefx	"Dvojklik zavře současné okno">
-<!ENTITY Ctr_appbclmmenus	"Clickable menus inside button menu (New Tab, Print...)">
+<!ENTITY Ctr_appbclmmenus	"Volitelný název tlačítka aplikace (Nový panel, Tisk...)">
 <!ENTITY Ctr_appbutonclab	"Název">
 <!ENTITY Ctr_appbutonclab2	"Zadejte název nebo ponechte prázdné">
 
